[project]
name = "volpulse"
version = "0.1.0"
description = "VolPulse: volatility-based algorithmic trading system"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "websockets>=12.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["volpulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
